bug: 🐛 Fixed overflow issue

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -828,3 +828,26 @@ Utilities for controlling the stack order of an element. */
 .z-auto {
   z-index: auto;
 }
+
+/* Position
+Utilities for controlling how an element is positioned in the DOM. */
+
+.static {
+  position: static;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+}
